# process-mem

./: README.rst  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  Contributing.rst  License.rst  Makefile  process-mem.rst
Docs/License/: License.rst
packaging/: PKGBUILD  requirements.txt
scripts/: check-source  do-install
src/process_mem/: __init__.py  __main__.py  process-mem  py.typed
src/process_mem/apps/: process-mem.py
src/process_mem/lib/: __init__.py  opts.py  proc_info.py  units.py  version.py
