[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/process_mem"]

[project]
name = "process-mem"
dynamic = ["version"]
description = "process-mem : Display Process(es) Memory Usage"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[project.urls]
Documentation = "https://github.com/gene-git/process_mem/Docs"
Issues = "https://github.com/gene-git/process_mem/issues"
Source = "https://github.com/gene-git/process_mem"

[tool.hatch.version]
path = "src/process_mem/lib/version.py"

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]
[tool.hatch.envs.lint]
detached = true
dependencies = [
]

