[build-system]
requires = ["uv_build>=0.9.21,<=1.0.0"]
build-backend = "uv_build"

[project]
name = "process-mem"
description = "process-mem : Display Process(es) Memory Usage"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "GPL-2.0-or-later"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.13"
version = "1.6.0"
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/process_mem/Docs"
Issues = "https://github.com/gene-git/process_mem/issues"
Source = "https://github.com/gene-git/process_mem"

[tool.uv.build-backend]
module-name = 'process_mem'
module-root = "src"
source-include = [
    '/process_mem',
    '/process_mem/py.typed',
]
source-exclude = [
    ".pytest_cache",
    "__pycache__",
    ".mypy_cache",
]


[tool.mypy]
check_untyped_defs = true

